# reslib

./: .buildinfo  .gitignore  .travis.yml  CLAUDE.md  MANIFEST.in  README.md  api.html  genindex.html  index.html  installation.html  objects.inv  philosophy.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.dev.txt  requirements.txt  search.html  searchindex.js  setup.py
_modules/: index.html
_modules/reslib/: automate.html  config.html
_modules/reslib/automate/: code_parser.html  scanner.html
_modules/reslib/data/: cache.html
_sources/: api.rst.txt  index.rst.txt  philosophy.rst.txt  quickstart.rst.txt
_sources/api/: reslib.automate.rst.txt  reslib.automate.tasks.rst.txt  reslib.config.rst.txt  reslib.data.sources.wrds.rst.txt  reslib.processing.rst.txt  reslib.rst.txt
_static/: documentation_options.js
api/: reslib.automate.html  reslib.automate.tasks.html  reslib.config.html  reslib.data.html  reslib.data.sources.html  reslib.data.sources.wrds.html  reslib.html  reslib.processing.html
docs/: api.rst  conf.py  installation.rst  philosophy.rst  quickstart.rst
docs/api/: reslib.automate.rst  reslib.data.rst  reslib.data.sources.rst  reslib.rst
reslib/: __init__.py  __version__.py  config.py
reslib/automate/: __init__.py  code_parser.py  code_scanner.py  plot.py  scanner.py
reslib/automate/tasks/: __init__.py  notebooks.py  sas.py  stata.py
reslib/dag/: __init__.py  code_parser.py  scanner.py
reslib/data/: __init__.py  cache.py  dataframe.py  io.py  merges.py
reslib/processing/: __init__.py  loops.py  notebooks.py  plot.py
(+7 files in other folders)
